# BasicIntepreter

./: CMakeLists.txt  Makefile  arithmetics.c  arithmetics.h  errors.c  errors.h  executer.c  executer.h  instructions.h  interpreter.c  interpreter.h  lexer.c  lexer.h  main.c  newFile.txt  stack.c  stack.h  token.h
